--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
   z-index: 999;
 }
 
-/* .navbar__container {
+.navbar__container {
   display: flex;
   justify-content: space-between;
   height: 80px;
@@ -29,7 +29,7 @@
   padding: 0 50px;
 }
 
-#navbar__logo {
+/* #navbar__logo {
   background-color: #ff8177;
   background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
   background-size: 100%;
