--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
   padding: 0 50px;
 }
 
-/* #navbar__logo {
+#navbar__logo {
   background-color: #ff8177;
   background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
   background-size: 100%;
@@ -42,5 +42,5 @@
   cursor: pointer;
   text-decoration: none;
   font-size: 2rem;
-} */
+}
 
