--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 125 px;
+  width: 125px;
   text-decoration: none;
   height: 100%;
 }
@@ -71,3 +71,9 @@
   padding: 0 1rem;
   width: 100%;
 }
+
+/* .button {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+} */
