--- a/style.css
+++ b/style.css
@@ -105,3 +105,15 @@
   color: #9518fc;
   transition: all 0.3s ease;
 }
+
+@media (max-width: 960px) {
+  .navbar__container {
+    display: flex;
+    justify-content: space-between;
+    height: 80px;
+    z-index: 1;
+    width: 100%;
+    max-width: 1300px;
+    padding: 0;
+  }
+}
