--- a/style.css
+++ b/style.css
@@ -116,4 +116,15 @@
     max-width: 1300px;
     padding: 0;
   }
+
+  .navbar__menu {
+    display: grid;
+    grid-template-columns: auto;
+    margin: 0;
+    width: 100%;
+    position: absolute;
+    top: -1000px;
+    opacity: 1;
+    transition: all 0.5s ease;
+  }
 }
