--- a/style.css
+++ b/style.css
@@ -126,5 +126,16 @@
     top: -1000px;
     opacity: 1;
     transition: all 0.5s ease;
+    z-index: -1;
+  }
+
+  .navbar__menu:active {
+    background: #131313;
+    top: 100%;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 99;
+    height: 60vh;
+    font-size: 1.6rem;
   }
 }
