--- a/style.css
+++ b/style.css
@@ -123,7 +123,8 @@
     margin: 0;
     width: 100%;
     position: absolute;
-    top: -1000px;
+    /* top: -1000px;
+    background: #131313; */
     opacity: 1;
     transition: all 0.5s ease;
     z-index: -1;
@@ -142,4 +143,13 @@
   #navbar__logo {
     padding-left: 25px;
   }
+
+  .navbar__toggle .bar {
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    transition: all 0.3s ease-in-out;
+    background-color: #fff;
+  }
+
 }
