--- a/style.css
+++ b/style.css
@@ -123,8 +123,8 @@
     margin: 0;
     width: 100%;
     position: absolute;
-    /* top: -1000px;
-    background: #131313; */
+    /* top: -1000px; */
+    background: #131313;
     opacity: 1;
     transition: all 0.5s ease;
     z-index: -1;
@@ -145,11 +145,12 @@
   }
 
   .navbar__toggle .bar {
+    display: block;
+    cursor: pointer;
     width: 25px;
     height: 3px;
     margin: 5px auto;
     transition: all 0.3s ease-in-out;
     background-color: #fff;
   }
-
 }
