--- a/style.css
+++ b/style.css
@@ -158,5 +158,10 @@
     width: 100%;
   }
 
-  
+  .navbar__links {
+    text-align: center;
+    padding: 2rem;
+    width: 100%;
+    display: table;
+  }
 }
