--- a/style.css
+++ b/style.css
@@ -168,4 +168,16 @@
   .navbar__btn {
     padding-bottom: 2rem;
   }
+
+  .button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: 80px;
+    margin: 0;
+
+  }
+
+  
 }
