--- a/style.css
+++ b/style.css
@@ -123,8 +123,8 @@
     margin: 0;
     width: 100%;
     position: absolute;
-    /* top: -1000px; */
-    background: #131313;
+    top: -1000px;
+    /* background: #131313; */
     opacity: 1;
     transition: all 0.5s ease;
     z-index: -1;
@@ -176,8 +176,12 @@
     width: 80%;
     height: 80px;
     margin: 0;
-
   }
 
-  
+  #mobile-menu {
+    position: absolute;
+    top: 20%;
+    right: 5%;
+    transform: translate(5%, 20%);
+  }
 }
