--- a/style.css
+++ b/style.css
@@ -184,4 +184,16 @@
     right: 5%;
     transform: translate(5%, 20%);
   }
+
+  #mobile-menu.is-active .bar:nth-child(2) {
+    opacity: 0;
+  }
+  #mobile-menu.is-active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+  #mobile-menu.is-active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(45deg);
+  }
+
+
 }
