--- a/style.css
+++ b/style.css
@@ -252,7 +252,7 @@
   background: linear-gradient(
     to right,
     #8f0eff,
-    #da22ff,
+    #da22ff
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   background-size: 100%;
   -webkit-background-clip: text;
@@ -263,3 +263,8 @@
   border-bottom: 4px solid rgb(132, 0, 255);
 }
 
+@media (max-width: 768px) {
+  .hero__heading {
+    font-size: 60px;
+  }
+}
