--- a/style.css
+++ b/style.css
@@ -275,7 +275,20 @@
 
 /* About section */
 
-.main{
+.main {
   background-color: #131313;
   padding: 10rem 0;
+}
+
+.main__container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  height: 90%;
+  z-index: 1;
+  width: 100%;
+  max-width: 1300px;
+  padding: 0 50px;
 }
