--- a/style.css
+++ b/style.css
@@ -336,4 +336,27 @@
   font-weight: 700;
 }
 
-
+.main__btn {
+  font-size: 1.8rem;
+  background: #8a2387; 
+  background: -webkit-linear-gradient(
+    to right,
+    #f27121,
+    #e94057,
+    #8a2387
+  );
+  background: linear-gradient(
+    to right,
+    #f27121,
+    #e94057,
+    #8a2387
+  );
+  padding: 20px 60px;
+  border: none;
+  border-radius: 4px;
+  margin-top: 2rem;
+  cursor: pointer;
+  position: relative;
+  transition: all 0.35s;
+  outline: none;
+}
