--- a/style.css
+++ b/style.css
@@ -361,3 +361,15 @@
 .main__btn:hover {
   color: #fff;
 }
+
+.main__btn:after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background-color: #ff1ead;
+  transition: all 0.35s;
+  border-radius: 4px;
+}
