Add media(maxwidth: 1100px): style .main__img--container

--- a/style.css
+++ b/style.css
@@ -416,4 +416,9 @@
     margin: 0 auto;
     height: 90%;
   }
+
+  .main__img--container {
+    display: flex;
+    justify-content: center;
+  }
 }
