--- a/style.css
+++ b/style.css
@@ -432,5 +432,16 @@
     margin-bottom: 4rem;
   }
 
-  
+  .main__content h1 {
+    font-size: 2.5rem;
+    margin-top: 2rem;
+  }
+  .main__content h2 {
+    font-size: 3rem;
+  }
+
+  .main__content p {
+    margin-top: 1rem;
+    font-size: 1.5rem;
+  }
 }
