Add media(maxwidth: 480px): style .main__content h1 h2 p

--- a/style.css
+++ b/style.css
@@ -456,4 +456,19 @@
   .fa-layer-group {
     font-size: 4rem;
   }
+
+  .main__content h1 {
+    font-size: 2rem;
+    margin-top: 3rem;
+  }
+  .main__content h2 {
+    font-size: 2rem;
+  }
+
+  .main__content p {
+    margin-top: 2rem;
+  }
+
+  
+
 }
