--- a/style.css
+++ b/style.css
@@ -498,3 +498,9 @@
   margin-bottom: 5rem;
   font-size: 2.5rem;
 }
+
+.services__wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+}
