--- a/style.css
+++ b/style.css
@@ -551,3 +551,9 @@
 .services__card h2 {
   text-align: center;
 }
+
+.services__card p {
+  text-align: center;
+  margin-top: 24px;
+  font-size: 20px;
+}
