--- a/style.css
+++ b/style.css
@@ -557,3 +557,9 @@
   margin-top: 24px;
   font-size: 20px;
 }
+
+.services__btn {
+  display: flex;
+  justify-content: center;
+  margin-top: 16px;
+}
