--- a/style.css
+++ b/style.css
@@ -563,3 +563,14 @@
   justify-content: center;
   margin-top: 16px;
 }
+
+.services__card button {
+  color: #fff;
+  padding: 14px 24px;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  background-color: #131313;
+  font-size: 1rem;
+}
+
