--- a/style.css
+++ b/style.css
@@ -578,3 +578,8 @@
   cursor: pointer;
 }
 
+.services__card:hover {
+  transform: scale(1.075);
+  transition: 0.3s ease-in;
+  cursor: pointer;
+}
