@media(max-width: 1300px): Style .services__wrapper

--- a/style.css
+++ b/style.css
@@ -583,3 +583,9 @@
   transition: 0.3s ease-in;
   cursor: pointer;
 }
+
+@media screen and (max-width: 1300px) {
+  .services__wrapper {
+    grid-template-columns: 1fr 1fr;
+  }
+}
