@media(max-width: 768px): Style .services__wrapper

--- a/style.css
+++ b/style.css
@@ -589,3 +589,9 @@
     grid-template-columns: 1fr 1fr;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .services__wrapper {
+    grid-template-columns: 1fr;
+  }
+}
