--- a/style.css
+++ b/style.css
@@ -627,3 +627,13 @@
   display: flex;
 }
 
+.footer__link--items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 16px;
+  text-align: left;
+  width: 160px;
+  box-sizing: border-box;
+}
+
