style .footer__links--items h2 a

--- a/style.css
+++ b/style.css
@@ -637,3 +637,15 @@
   box-sizing: border-box;
 }
 
+.footer__link--items h2 {
+  margin-bottom: 16px;
+  color: #fff;
+}
+
+.footer__link--items a {
+  color: #fff;
+  text-decoration: none;
+  margin-bottom: 0.5rem;
+}
+
+
