--- a/style.css
+++ b/style.css
@@ -682,3 +682,9 @@
 .website__rights {
   color: #fff;
 }
+
+@media screen and (max-width: 820px) {
+  .footer__links {
+    padding-top: 2rem;
+  }
+}
