--- a/style.css
+++ b/style.css
@@ -699,4 +699,10 @@
   .footer__link--wrapper {
     flex-direction: column;
   }
+
+  .social__media--wrap {
+    flex-direction: column;
+  }
 }
+
+
